<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SpiceSpiritTest</groupId>
  <artifactId>SpiceSpiritTest</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <dependencies>
  	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-java</artifactId>
		<version>2.52.0</version>
	</dependency>

	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-remote-driver</artifactId>
		<version>2.52.0</version>
	</dependency>

	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>6.8.8</version>
	</dependency>
  
	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.16</version>
		<scope>provided</scope>
	</dependency>
  
  	<dependency>
    	<groupId>dom4j</groupId>
    	<artifactId>dom4j</artifactId>
    	<version>1.6.1</version>
	</dependency>
  	
  	<dependency>
    	<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
    	<version>5.1.38</version>
	</dependency>
  	
  	
  </dependencies>
  
  <build>
  <!-- 新版本maven配合这个标签使用指定代码目录 -->
	<testSourceDirectory>src</testSourceDirectory> 
		<resources>
			<resource>
				<directory>src</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
  
  
    <plugins>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
     
     <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.18.1</version>
		<configuration>
			<!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
			<argLine>-Dfile.encoding=UTF-8</argLine>
			<!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
			<argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
			<forkCount>0</forkCount>
			<suiteXmlFiles>
				<suiteXmlFile>testng.xml</suiteXmlFile>
			</suiteXmlFiles>
			<!--定义maven运行测试生成的报表路径 -->
			<reportsDirectory>./result/test-report</reportsDirectory>
		</configuration>
	</plugin> 
    </plugins>
  </build>
</project>